codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__notes__tests__notes_reader_empty.snap
---
source: tui/src/pager_overlay/notes_tests.rs
expression: "render(&mut overlay, 65, 10)"
---
"/ Notes to self (0) / / / / / / / / / / / / / / / / / / / / / /  "
"No notes yet. Add one with /nts <note>.                          "
"~                                                                "
"~                                                                "
"~                                                                "
"~                                                                "
"────────────────────────────────────────────────────────── 100% ─"
" ↑/↓ to scroll · pgup/pgdn to page · home/end to jump            "
" esc close                                                       "
"                                                                 "
