codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__notes__tests__notes_reader_loading.snap
---
source: tui/src/pager_overlay/notes_tests.rs
expression: "render(&mut overlay, 65, 10)"
---
"/ Notes to self / / / / / / / / / / / / / / / / / / / / / / / /  "
"Loading notes…                                                   "
"~                                                                "
"~                                                                "
"~                                                                "
"~                                                                "
"────────────────────────────────────────────────────────── 100% ─"
" ↑/↓ to scroll · pgup/pgdn to page · home/end to jump            "
" esc close                                                       "
"                                                                 "
