codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__notes__tests__notes_reader_narrow.snap
---
source: tui/src/pager_overlay/notes_tests.rs
expression: "render(&mut overlay, 32, 23)"
---
"/ Notes to self (2) / / / / / / "
"                                "
"  Note to self                  "
"  Side conversation summary     "
"                                "
"  Use the existing pager        "
"  navigation. Keep the full     "
"  note visible, including       "
"  longer lines and blank lines. "
"                                "
"                                "
"  Note to self                  "
"  Remember to check the edge    "
"  cases.                        "
"                                "
"~                               "
"~                               "
"~                               "
"~                               "
"───────────────────────── 100% ─"
" ↑/↓ to scroll · pgup/pgdn to pa"
" esc close                      "
"                                "
